--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<html> 
 
+  <head> 
+      <title>
+    Bushra Al-Hetelah
+      </title>
+  </head>
+  <body>
+    <h1> Hello There </h1>
+  </body> 
+  <style>
+    body{
+    background-ground: blue ; 
+    color: #fff; 
+    text-align: center; }
+  </style>
+</html>
