--- a/index.html
+++ b/index.html
@@ -1,17 +1,131 @@
-<html> 
 
-  <head> 
-      <title>
-    Bushra Al-Hetelah
-      </title>
+  
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>  بشرى آل هتيله - Cybersecurity | Imam Abdulrahman bin Faisal University  </title>
+
+        <meta charset="UTF-8">
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+
+<style > 
+a{
+text-align: center; 
+padding: 12%; 
+text-decoration: none ; 
+color: black ; 
+}
+#element1 {float:left;
+text-align: center;
+}
+h5{ 
+color : blue; }
+#element2 {float:left;
+
+  text-align: center;
+vertical-align: baseline; }
+  
+  
+  .flex-container {
+  display: flex;
+  flex-wrap: nowrap;
+ 
+  text-align: center;
+}
+
+.flex-container > div {
+  flex-direction:  row-reverse;
+  flex-wrap: nowrap ;
+  justify-content: center ;
+  flex-basis: 15%; 
+  background-color : #DEE457 ;  
+}
+.item-a {
+  grid-area: header;
+}
+
+.item-b {
+  grid-area: main ;
+  align: right; 
+  text-align: right ; 
+  padding: 10% ; 
+ 
+}
+
+.item-c {
+  grid-area: sidebar;
+}
+
+
+.container {
+display: grid; 
+  grid-template-columns: 70% 30% ;
+  grid-template-rows:  auto;
+  grid-template-areas: 
+  ' header header '
+    ' main main '
+	 'footer footer'; 
+	  align-items: stretch;
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #F7FBF0;
+  color: black;
+  text-align: center;
+}
+</style> 
+
+ 
   </head>
-  <body>
-    <h1> Hello There </h1>
-  </body> 
-  <style>
-    body{
-    background-ground: blue ; 
-    color: #fff; 
-    text-align: center; }
-  </style>
+  
+   <body lang="ar"   >
+ 
+  
+  <section class="container">
+  
+  
+ <div class="item-a">  <div class="flex-container">
+  <div> </div>
+    
+	   <div> </div>
+  <div> <font size=" 5 % "> <b> <a href  id="element2"> مدونتي  </a></b> </font> </div>
+  <div>   <font size=" 5 % "> <h2 id="element2"> | <h2> </font> </div>
+  <div>  <font size=" 5 % "> <b><strong> <a href  id="element2" > من أنا  </a> </strong> </b> </font> </div>
+<div> </div>
+  <div> <h3 id="element1" > بشرى آل هتيله <br>  Cybersecurity | IAU </h3>  </div> 
+ <div>  
+ <img src= "https://cdn0.iconfinder.com/data/icons/data-science-1-3/66/61-512.png" align=left , width= 50% px , height= 80% px  > 
+  </div> </div>
+  <div class="item-b"> <h2>   الخصائص البيومترية </h2>
+
+  </div>
+  <div class="item-c"> </div>
+ 
+  
+</section>
+ <div class="footer">
+ <a href="https://www.linkedin.com/in/bushra-al-hetelah-393425160">
+<img border="0" alt="W3Schools" src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-linkedin-circle-512.png" width="2%" height="2%">
+<a href="https://twitter.com/2000_Bushrahh">
+<img border="0" alt="W3Schools" src=" https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" width="2.1%" height="2.1%">
+<a href="https://www.youtube.com/channel/UCToZZl_RxWK2coo9CWyuaRg?sub_confirmation=1">
+<img border="0" alt="W3Schools" src="https://www.logo.wine/a/logo/YouTube/YouTube-Icon-Full-Color-Logo.wine.svg" width="3.4%" height="3.4%">
+
+</div>
+</div>
+
+ 
+ 
+
+ 
+
+
+  </body>
 </html>
