--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ display: grid;
 <div> </div>
   <div> <h3 id="element1" > بشرى آل هتيله <br>  Cybersecurity | IAU </h3>  </div> 
  <div>  
- <img src= "https://cdn0.iconfinder.com/data/icons/data-science-1-3/66/61-512.png" align=left , width= 50% px , height= 80% px  > 
+ <img src= "https://cdn0.iconfinder.com/data/icons/data-science-1-3/66/61-512.png" align=left , width= 50% , height= 80%   > 
   </div> </div>
   <div class="item-b"> <h2>   الخصائص البيومترية </h2>
 
