--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="مدونة خاصة ببشرى آل هتيله، تحوي مواضيع مختلفة متعلقة بالتقنية ">
 
     <meta name="author" content="Bushra Al-Hetelah">
-<link href="new.css" rel="stylesheet" type="text/css">
+<link href="BushraH2000/BushraH.Blogger/blob/master/new.css" rel="stylesheet" type="text/css">
    
     <!-- <link href="https://www.flexcourses.com/css/bootstrap.min.css?v=1596224019" rel="stylesheet"> -->
 
