--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ font-weight:400}
                         <hr class="d-md-non">
                         <div  style="line-height: 25px">
                             <p class="d-inlin">
-                   هي مدونة علمية تقنية، تهدف إلى اثراء المحتوى العربي وطرح المواضيع التقنية التي ذكرت في الكتب والأبحاث  الإنجليزية بحيث يتم ترجمتها وإعادة صياغتها للغة العربية. 
+                   هي مدونة علمية تقنية، تهدف إلى إثراء المحتوى العربي وطرح المواضيع التقنية التي ذكرت في الكتب والأبحاث  الإنجليزية بحيث يتم ترجمتها وإعادة صياغتها للغة العربية. 
                             </p>
                           
 </div>
