--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ font-weight:400}
                     </li>
                                     <li class="nav-i ">
                         <a class=" nav-l font-h" title="من أنا"
-                           href="">من أنا </a>
+                           href="https://github.com/BushraH2000/BushraH.Blogger/blob/master/index1.html">من أنا </a>
                     </li>
                                    
                                    
