--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ font-weight:400}
                     </li>
                                     <li class="nav-i ">
                         <a class=" nav-l font-h" title="من أنا"
-                           href="index1.html">من أنا </a>
+                           href="/index1">من أنا </a>
                     </li>
                                    
                                    
