--- a/index.html
+++ b/index.html
@@ -201,8 +201,25 @@ font-weight:400}
 <div id="body-container">
 
 <h1> Hello </h1>
+
+<p> التعرف على هوية الشخص تكون من خلال 3 طرق:
+1-	 شيء يعرفه: ككلمات السر ورقم الهوية الوطنية.  Knowledge-based
+2-	شيء يملكه: كالمفاتيح وبطاقات البنك المصرفية. token-based
+3-	شيء يرتبط بذات الشخص: كبصمات الأصابع وشكل قزحية العين. biometric traits
+الطريقتين الأولى والثانية لم تعد ذات جدوى، وذلك يرجع لعدة أسباب منها: عدم قدرتها على كشف التسجيل المتعدد من قبل نفس الشخص بهويات مختلفة (كامتلاك الشخص أكثر من حساب في تويتر)، وعدم قدرتها على منع السرقة.
+وكان الحل هو اللجوء إلى الخصائص البيومترية والتي بدورها استطاعت حل المشكلات السابقة.
+الخصائص البومترية:
+هي خصائص تستخدم للتعرف والتأكد من هوية الشخص بطريقة آلية، مثل الصوت وشبكية العين.
+علم التعرف على الخصائص البومتيرية تسعى إلى تحقيق شيئين أساسيين وهما التفرد والاستمرارية، وبناء على ذلك تمت المفاضلة بين الخصائص البومترية وتحديد أفضلها.
+التفرد uniqueness: أي لا يملك شخصين نفس الخصائص البيومترية.
+الاستمرارية   : permanenceأي دوام وثبات الخصائص البومترية وعدم تغيرها مع الزمن.
+
+مرة واحدة فقط خلال وجودنا في نظامنا الشمسي سوف يولد شخصين لهما نفس بصمات الأصابع.
+Harper’s headline, 1910.
+
+</p> 
 <br>
-<br> <br> <br> <br> 
+<br> <br> <br> <br>
          </div>
 
 
