--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ font-weight:400}
 <!-- Page Content -->
 <div id="body-container">
 
-<a href= ./Biometric.html" >   Hello </a>
+<a href= ./index2.html" >   Hello </a>
 
 <br>
 <br> <br> <br> <br>
