--- a/index2.html
+++ b/index2.html
@@ -203,8 +203,8 @@ font-weight:400}
 
 <p>  التعرف على هوية الشخص تكون من خلال 3 طرق:
   <br>
-1-	Knowledge-based شيء يعرفه: ككلمات السر ورقم الهوية الوطنية.
-<br>  
+1- شيء يعرفه: ككلمات السر ورقم الهوية الوطني	Knowledge-based.
+<br>
 2-	شيء يملكه: كالمفاتيح وبطاقات البنك المصرفية. token-based
 3-	شيء يرتبط بذات الشخص: كبصمات الأصابع وشكل قزحية العين. biometric traits
 الطريقتين الأولى والثانية لم تعد ذات جدوى، وذلك يرجع لعدة أسباب منها: عدم قدرتها على كشف التسجيل المتعدد من قبل نفس الشخص بهويات مختلفة (كامتلاك الشخص أكثر من حساب في تويتر)، وعدم قدرتها على منع السرقة.
