--- a/index2.html
+++ b/index2.html
@@ -203,7 +203,7 @@ font-weight:400}
 
 <p>  التعرف على هوية الشخص تكون من خلال 3 طرق:
   <br>
-1- شيء يعرفه: ككلمات السر ورقم الهوية الوطني	Knowledge-based.
+1- شيء يعرفهKnowledge-based : ككلمات السر ورقم الهوية الوطني	.
 <br>
 2-	شيء يملكه: كالمفاتيح وبطاقات البنك المصرفية. token-based
 3-	شيء يرتبط بذات الشخص: كبصمات الأصابع وشكل قزحية العين. biometric traits
