--- a/index2.html
+++ b/index2.html
@@ -201,9 +201,9 @@ font-weight:400}
 
 <h1> Hello </h1>
 
-<p>  التعرف على هوية الشخص تكون من خلال 3 طرق:
+	<p>  <p style= "colore: #900C3F"> التعرف على هوية الشخص تكون من </p> خلال 3 طرق:
   <br>
-1- شيء يعرفهKnowledge-based : ككلمات السر ورقم الهوية الوطني	.
+1-    شيء يعرفه Knowledge-based : ككلمات السر ورقم الهوية الوطني	.
 <br>
 2-	شيء يملكه: كالمفاتيح وبطاقات البنك المصرفية. token-based
 3-	شيء يرتبط بذات الشخص: كبصمات الأصابع وشكل قزحية العين. biometric traits
