--- a/index2.html
+++ b/index2.html
@@ -201,7 +201,7 @@ font-weight:400}
 
 <h1> Hello </h1>
 
-	<p>  <p style= "colore: #900C3F"> التعرف على هوية الشخص تكون من </p> خلال 3 طرق:
+	<p>  <b> التعرف على هوية الشخص تكون من خلال<b> 3 طرق:
   <br>
 1-    شيء يعرفه Knowledge-based : ككلمات السر ورقم الهوية الوطني	.
 <br>
