--- a/index2.html
+++ b/index2.html
@@ -216,17 +216,20 @@ font-weight:400}
 هي خصائص تستخدم للتعرف والتأكد من هوية الشخص بطريقة آلية، مثل الصوت وشبكية العين.
 		<br> <br>
 علم التعرف على الخصائص البومتيرية تسعى إلى تحقيق شيئين أساسيين وهما التفرد والاستمرارية، وبناء على ذلك تمت المفاضلة بين الخصائص البومترية وتحديد أفضلها.
-التفرد uniqueness: أي لا يملك شخصين نفس الخصائص البيومترية.
 		<ul> <li> 
+التفرد uniqueness: أي لا يملك شخصين نفس الخصائص البيومترية.
+			</li>  <li> 
 الاستمرارية   : permanenceأي دوام وثبات الخصائص البومترية وعدم تغيرها مع الزمن.
-			</li> 
-			<li> 
+			</li> </p>
+	<p style="color: #869823 " >
+			 
 مرة واحدة فقط خلال وجودنا في نظامنا الشمسي سوف يولد شخصين لهما نفس بصمات الأصابع.
 Harper’s headline, 1910.
-			</li> 
-	</ul> 
+	</p>
+		 
+	
 
-</p>
+
 <br>
 <br> <br> <br> <br>
          </div>
