--- a/index2.html
+++ b/index2.html
@@ -212,6 +212,7 @@ font-weight:400}
 		<br> 
 الطريقتين الأولى والثانية لم تعد ذات جدوى، وذلك يرجع لعدة أسباب منها: عدم قدرتها على كشف التسجيل المتعدد من قبل نفس الشخص بهويات مختلفة (كامتلاك الشخص أكثر من حساب في تويتر)، وعدم قدرتها على منع السرقة.
 وكان الحل هو اللجوء إلى الخصائص البيومترية والتي بدورها استطاعت حل المشكلات السابقة.
+		<br>
 الخصائص البومترية:
 هي خصائص تستخدم للتعرف والتأكد من هوية الشخص بطريقة آلية، مثل الصوت وشبكية العين.
 		<br> <br>
@@ -221,10 +222,9 @@ font-weight:400}
 			</li>  <li> 
 الاستمرارية   : permanenceأي دوام وثبات الخصائص البومترية وعدم تغيرها مع الزمن.
 			</li> </p>
-	<p style="color: #869823 " >
-			 
+<p style="color: #74821F " >		 
 مرة واحدة فقط خلال وجودنا في نظامنا الشمسي سوف يولد شخصين لهما نفس بصمات الأصابع.
-Harper’s headline, 1910.
+.Harper’s headline, 1910
 	</p>
 		 
 	
