--- a/index2.html
+++ b/index2.html
@@ -199,7 +199,8 @@ font-weight:400}
 <!-- Page Content -->
 <div id="body-container">
 
-<h1> Hello </h1>
+<h1 style="color: #374001"> الخصائص البيومترية  </h1>
+	<br> 
 
 	<p>   التعرف على هوية الشخص تكون من خلال 3 طرق:
   <br>
