--- a/index2.html
+++ b/index2.html
@@ -198,11 +198,11 @@ font-weight:400}
 
 <!-- Page Content -->
 <div id="body-container">
-
+<br> 
 <h1 style="color: #374001"> الخصائص البيومترية  </h1>
 	<br> 
 
-	<p>   التعرف على هوية الشخص تكون من خلال 3 طرق:
+	<p>   للتعرف على هوية الشخص تكون من خلال 3 طرق:
   <br>
 1-    شيء يعرفه Knowledge-based : ككلمات السر ورقم الهوية الوطني	.
 <br>
@@ -213,8 +213,11 @@ font-weight:400}
 		<br> 
 الطريقتين الأولى والثانية لم تعد ذات جدوى، وذلك يرجع لعدة أسباب منها: عدم قدرتها على كشف التسجيل المتعدد من قبل نفس الشخص بهويات مختلفة (كامتلاك الشخص أكثر من حساب في تويتر)، وعدم قدرتها على منع السرقة.
 وكان الحل هو اللجوء إلى الخصائص البيومترية والتي بدورها استطاعت حل المشكلات السابقة.
-		<br>
-الخصائص البومترية:
+	</p><br>
+		<br> 
+	<p style="color: #BA2207">
+الخصائص البومترية: 
+	</p>
 هي خصائص تستخدم للتعرف والتأكد من هوية الشخص بطريقة آلية، مثل الصوت وشبكية العين.
 		<br> <br>
 علم التعرف على الخصائص البومتيرية تسعى إلى تحقيق شيئين أساسيين وهما التفرد والاستمرارية، وبناء على ذلك تمت المفاضلة بين الخصائص البومترية وتحديد أفضلها.
