--- a/index2.html
+++ b/index2.html
@@ -206,9 +206,9 @@ font-weight:400}
   <br>
 1-    شيء يعرفه Knowledge-based : ككلمات السر ورقم الهوية الوطني	.
 <br>
-2-	شيء يملكه: كالمفاتيح وبطاقات البنك المصرفية. token-based
+2-	شيء يملكه token-based: كالمفاتيح وبطاقات البنك المصرفية. 
 		<br> 
-3-	شيء يرتبط بذات الشخص: كبصمات الأصابع وشكل قزحية العين. biometric traits
+3-	شيء يرتبط بذات الشخص biometric traits: كبصمات الأصابع وشكل قزحية العين. 
 		<br> 
 		<br> 
 الطريقتين الأولى والثانية لم تعد ذات جدوى، وذلك يرجع لعدة أسباب منها: عدم قدرتها على كشف التسجيل المتعدد من قبل نفس الشخص بهويات مختلفة (كامتلاك الشخص أكثر من حساب في تويتر)، وعدم قدرتها على منع السرقة.
