--- a/index2.html
+++ b/index2.html
@@ -181,7 +181,7 @@ font-weight:400}
             <ul class="navbar-nav" >
                                     <li >
                         <a class="nav-l font-h" title="مدونتي"
-                           href="">مدونتي</a>
+                           href="./index.html">مدونتي</a>
                     </li>
                                     <li class="nav-i ">
                         <a class=" nav-l font-h" title="من أنا"
@@ -202,7 +202,7 @@ font-weight:400}
 <h1 style="color: #374001"> الخصائص البيومترية  </h1>
 	<br> 
 
-	<p>   للتعرف على هوية الشخص تكون من خلال 3 طرق:
+	<p>    يتم التحقق من هويتك في العالم الافتراضي من خلال: 
   <br>
 1-    شيء يعرفه Knowledge-based : ككلمات السر ورقم الهوية الوطني	.
 <br>
@@ -210,9 +210,9 @@ font-weight:400}
 		<br> 
 3-	شيء يرتبط بذات الشخص biometric traits: كبصمات الأصابع وشكل قزحية العين. 
 		<br> 
-		<br> 
-الطريقتين الأولى والثانية لم تعد ذات جدوى، وذلك يرجع لعدة أسباب منها: عدم قدرتها على كشف التسجيل المتعدد من قبل نفس الشخص بهويات مختلفة (كامتلاك الشخص أكثر من حساب في تويتر)، وعدم قدرتها على منع السرقة.
-وكان الحل هو اللجوء إلى الخصائص البيومترية والتي بدورها استطاعت حل المشكلات السابقة.
+		<br> الطريقتين الأولى والثانية لم تعد ذات جدوى، وذلك يرجع لعدة أسباب منها: عدم قدرتها على كشف التسجيل المتعدد من قبل نفس الشخص بهويات مختلفة (كامتلاك الشخص أكثر من حساب في تويتر)، وعدم قدرتها على منع سرقة هوية الغير. 
+وكان الحل هو اللجوء إلى الخصائص البيومترية والتي بدورها استطاعت حل المشكلات السابقة. 
+.
 	</p><br>
 		<br> 
 	<p style="color: #BA2207">
@@ -222,7 +222,7 @@ font-weight:400}
 		<br> <br>
 علم التعرف على الخصائص البومتيرية تسعى إلى تحقيق شيئين أساسيين وهما التفرد والاستمرارية، وبناء على ذلك تمت المفاضلة بين الخصائص البومترية وتحديد أفضلها.
 		<ul> <li> 
-التفرد uniqueness: أي لا يملك شخصين نفس الخصائص البيومترية.
+التفرد uniqueness: أي لا يوجد شخصين يملكون نفس الخصائص البيومترية.
 			</li>  <li> 
 الاستمرارية   : permanenceأي دوام وثبات الخصائص البومترية وعدم تغيرها مع الزمن.
 			</li> </p>
@@ -230,6 +230,9 @@ font-weight:400}
 مرة واحدة فقط خلال وجودنا في نظامنا الشمسي سوف يولد شخصين لهما نفس بصمات الأصابع.
 .Harper’s headline, 1910
 	</p>
+	<p> 
+		قُبِل الادعاء السابق ليس بسبب وجود الأدلة العلمية الدقيقة التي تثبت صحته، بل لعدم وجود أدلة تناقضه. 
+	</p> 
 		 
 	
 
