--- a/index1.html
+++ b/index1.html
@@ -183,7 +183,7 @@ font-weight:400}
             <ul class="navbar-nav" >
                                     <li >
                         <a class="nav-l font-h" title="مدونتي"
-                           href="">مدونتي</a>
+                           href="./index.html">مدونتي</a>
                     </li>
                                     <li class="nav-i ">
                         <a class=" nav-l font-h" title="من أنا"
