--- a/index2.html
+++ b/index2.html
@@ -204,15 +204,15 @@ font-weight:400}
 
 	<p>    يتم التحقق من هويتك في العالم الافتراضي من خلال: 
   <br>
-1-    شيء يعرفه Knowledge-based : ككلمات السر ورقم الهوية الوطني	.
+1-    شيء تعرفه Knowledge-based : ككلمات السر ورقم الهوية الوطني	.
 <br>
-2-	شيء يملكه token-based: كالمفاتيح وبطاقات البنك المصرفية. 
+2-	شيء تملكه token-based: كالمفاتيح وبطاقات البنك المصرفية. 
 		<br> 
-3-	شيء يرتبط بذات الشخص biometric traits: كبصمات الأصابع وشكل قزحية العين. 
+3-	شيء يرتبط بذاتك  biometric traits: كبصمات الأصابع وشكل قزحية العين. 
 		<br> 
 		<br> الطريقتين الأولى والثانية لم تعد ذات جدوى، وذلك يرجع لعدة أسباب منها: عدم قدرتها على كشف التسجيل المتعدد من قبل نفس الشخص بهويات مختلفة (كامتلاك الشخص أكثر من حساب في تويتر)، وعدم قدرتها على منع سرقة هوية الغير. 
 وكان الحل هو اللجوء إلى الخصائص البيومترية والتي بدورها استطاعت حل المشكلات السابقة. 
-.
+
 	</p><br>
 		<br> 
 	<p style="color: #BA2207">
@@ -230,9 +230,9 @@ font-weight:400}
 مرة واحدة فقط خلال وجودنا في نظامنا الشمسي سوف يولد شخصين لهما نفس بصمات الأصابع.
 .Harper’s headline, 1910
 	</p>
-	<p> 
-		قُبِل الادعاء السابق ليس بسبب وجود الأدلة العلمية الدقيقة التي تثبت صحته، بل لعدم وجود أدلة تناقضه. 
-	</p> 
+<p> 
+قُبِل الادعاء السابق ليس بسبب وجود الأدلة العلمية الدقيقة التي تثبت صحته، بل لعدم وجود أدلة تناقضه. 
+</p> 
 		 
 	
 
