--- a/index2.html
+++ b/index2.html
@@ -211,7 +211,7 @@ font-weight:400}
 3-	شيء يرتبط بذاتك   biometric traits: كبصمات الأصابع وشكل قزحية العين. 
 		<br> 
 		<br> الطريقتين الأولى والثانية لم تعد ذات جدوى، وذلك يرجع لعدة أسباب منها: عدم قدرتها على كشف التسجيل المتعدد من قبل نفس الشخص بهويات مختلفة (كامتلاك الشخص أكثر من حساب في تويتر)، وعدم قدرتها على منع سرقة هوية الغير. 
-<br> 
+<br> <br> 
 		وكان الحل هو اللجوء إلى الخصائص البيومترية والتي بدورها استطاعت حل المشكلات السابقة. 
 		
 
@@ -226,7 +226,7 @@ font-weight:400}
 		<ul> <li> 
 التفرد uniqueness: أي لا يوجد شخصين يملكون نفس الخصائص البيومترية.
 			</li>  <li> 
-الاستمرارية   : permanenceأي دوام وثبات الخصائص البومترية وعدم تغيرها مع الزمن.
+الاستمرارية permanence  : أي دوام وثبات الخصائص البومترية وعدم تغيرها مع الزمن.
 			</li> </p>
 <p style="color: #74821F " >		 
 مرة واحدة فقط خلال وجودنا في نظامنا الشمسي سوف يولد شخصين لهما نفس بصمات الأصابع.
