--- a/index2.html
+++ b/index2.html
@@ -1,3 +1,34 @@
+Skip to content
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@BushraH2000 
+BushraH2000
+/
+BushraH.Blogger
+1
+00
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+Settings
+BushraH.Blogger/index2.html
+@BushraH2000
+BushraH2000 Update index2.html
+Latest commit 1c36d15 16 minutes ago
+ History
+ 1 contributor
+314 lines (224 sloc)  15.8 KB
+  
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <meta charset="utf-8">
@@ -236,10 +267,15 @@ font-weight:400}
 قُبِل الادعاء السابق ليس بسبب وجود الأدلة العلمية الدقيقة التي تثبت صحته، بل لعدم وجود أدلة تناقضه. 
 </p> 
 		 
-	
-
-
 <br>
+<p> النظام البيومتري يعمل بمرحلتين أساسيتين، هما:   </p> 
+<ul> 
+<li> مرحلة التسجيل Enrollment phase : </li> 
+<p> يتم الحصول على البيانات البيومترية الخاصة بالفرد لأول مرة بحيث يتم تخزينها في قاعدة البيانات وربطها مع هويتك، مع إمكانية استدعائها لاحقاً عندما يتطلب الأمر، وتنفذ هذه المرحلة مرة واحدة فقط. (كإضافة بصمة الأصبع لأول مرة في جهازك)   </p> 
+<li> مرحلة التعرف recognition phase: 
+</li> 
+<p> تتم عملية ادخال البيانات البيومترية الخاصة بالشخص، ومن ثم مقارنتها بالبيانات المسجلة في قاعدة البيانات ليتم التحقق من صحة هويتك، وتنفذ هذه المرحلة في كل مرة يستلزم فيها النظام التحقق من هويتك. (كإدخال بصمة الإصبع عند كل مرة تستخدم فيها جهازك)</p> 
+</ul> 
 <br> <br> <br> <br>
          </div>
 
@@ -312,3 +348,15 @@ font-weight:400}
 </body>
 
 </html>
+© 2020 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
