--- a/index2.html
+++ b/index2.html
@@ -228,17 +228,17 @@ font-weight:400}
 التفرد uniqueness: أي لا يوجد شخصين يملكون نفس الخصائص البيومترية.
 			</li>  <li> 
 الاستمرارية permanence  : أي دوام وثبات الخصائص البومترية وعدم تغيرها مع الزمن.
-			</li> </p> </ul> 
+			</li> </p> 
 <p style="color: #74821F " >		 
 مرة واحدة فقط خلال وجودنا في نظامنا الشمسي سوف يولد شخصين لهما نفس بصمات الأصابع.
 .Harper’s headline, 1910
-	</p>
+	</ul> </p>
 <p> 
 قُبِل الادعاء السابق ليس بسبب وجود الأدلة العلمية الدقيقة التي تثبت صحته، بل لعدم وجود أدلة تناقضه. 
 </p> 
 		 
 <br>
-<p> النظام البيومتري يعمل بمرحلتين أساسيتين، هما:   </p> 
+<p style="color: #BA2207"> النظام البيومتري يعمل بمرحلتين أساسيتين، هما:   </p> 
 <p> <ul> 
 <li> مرحلة التسجيل Enrollment phase : </li> 
 <p> يتم الحصول على البيانات البيومترية الخاصة بالفرد لأول مرة بحيث يتم تخزينها في قاعدة البيانات وربطها مع هويتك، مع إمكانية استدعائها لاحقاً عندما يتطلب الأمر، وتنفذ هذه المرحلة مرة واحدة فقط. (كإضافة بصمة الأصبع لأول مرة في جهازك)   </p> 
