--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@ hr{margin-top:1rem;margin-bottom:1rem;border:0;border-top:1px solid rgba(0,0,0,.
 
 .col-md-4{position:relative;width:100%;padding-right:15px;padding-left:15px}
 
-.nav-logoo{width: 70 px; height:60px}
+	       .nav-logoo{width: 70 px; height:60px} 
+	         .nav-img{width: 200 px; height:170px} 
 
 		.nav-linkf{
 		color:#495057;background-color:#fff;border-color:#dee2e6 #dee2e6 #fff;
@@ -175,7 +176,7 @@ font-weight:400}
 
         <div class="navbar" >
 		<div class="container-fluid" >
-        <a href="" title="Mylogo">
+        <a href="./index.html" title="Mylogo">
             <img class="nav-logoo " src="
             https://cdn0.iconfinder.com/data/icons/data-science-1-3/66/61-512.png" alt="BH">
         </a>
@@ -199,8 +200,13 @@ font-weight:400}
 
 <!-- Page Content -->
 <div id="body-container">
-
-<a href= "./index2.html" >   Hello </a>
+	<h4> الخصائص البيومترية </h4> 
+	<a href="./index2.html" title="Mylogo">
+            <img class=".nav-img " src="https://static.palizafzar.com/media/editor_uploads/2020/01/09/types-of-biometric-system.jpg" alt="BH">
+        </a>
+	 
+	
+<a href= "./index2.html" >   المزيد </a>
 
 <br>
 <br> <br> <br> <br>
