--- a/index1.html
+++ b/index1.html
@@ -176,7 +176,7 @@ font-weight:400}
 
         <div class="navbar" >
 		<div class="container-fluid" >
-        <a href="" title="Mylogo">
+        <a href="./index.html" title="Mylogo">
             <img class="nav-logoo " src="
             https://cdn0.iconfinder.com/data/icons/data-science-1-3/66/61-512.png" alt="BH">
         </a>
