--- a/index2.html
+++ b/index2.html
@@ -77,8 +77,8 @@
 الاستمرارية permanence  : أي دوام وثبات الخصائص البومترية وعدم تغيرها مع الزمن.
 			</li> </p> 
 <p style="color: #74821F " >		 
-مرة واحدة فقط خلال وجودنا في نظامنا الشمسي سوف يولد شخصين لهما نفس بصمات الأصابع.
-.Harper’s headline, 1910
+مرة واحدة فقط خلال وجودنا في نظامنا الشمسي سوف يولد شخصين لهما نفس بصمات الأصابع.،،
+.Harper’s headline, 1910,,
 	</ul> </p>
 <p> 
 قُبِل الادعاء السابق ليس بسبب وجود الأدلة العلمية الدقيقة التي تثبت صحته، بل لعدم وجود أدلة تناقضه. 
