--- a/index2.html
+++ b/index2.html
@@ -78,7 +78,7 @@
 			</li> </p> 
 <p style="color: #74821F " >		 
 ،، مرة واحدة فقط خلال وجودنا في نظامنا الشمسي سوف يولد شخصين لهما نفس بصمات الأصابع.
-Harper’s headline, 1910. ،، 
+،، Harper’s headline, 1910.  
 
 	</ul> </p>
 <p> 
