--- a/index2.html
+++ b/index2.html
@@ -50,7 +50,7 @@
 <h1 style="color: #374001"> الخصائص البيومترية  </h1>
 	<br> 
 
-	<p>    يتم التحقق من هويتك في العالم الافتراضي من خلال: 
+	<p>    لنتعرف في البداية كيف يتم التحقق من هويتك في العالم الافتراضي؟! هناك 3 أساليب وتكون من خلال: 
   <br>
 1-    شيء تعرفه Knowledge-based : ككلمات السر ورقم الهوية الوطني	.
 <br>
@@ -66,15 +66,15 @@
 	</p><br>
 		<br> 
 	<p style="color: #BA2207">
-الخصائص البومترية: 
+الخصائص البيومترية: 
 	</p><p> 
 هي خصائص تستخدم للتعرف والتأكد من هوية الشخص بطريقة آلية، مثل الصوت وشبكية العين.
 		<br> <br>
-علم التعرف على الخصائص البومتيرية تسعى إلى تحقيق شيئين أساسيين وهما التفرد والاستمرارية، وبناء على ذلك تمت المفاضلة بين الخصائص البومترية وتحديد أفضلها.
+علم التعرف على الخصائص البيومتيرية تسعى إلى تحقيق شيئين أساسيين وهما التفرد والاستمرارية، وبناء على ذلك تمت المفاضلة بين الخصائص البيومترية وتحديد أفضلها.
 		<ul> <li> 
 التفرد uniqueness: أي لا يوجد شخصين يملكون نفس الخصائص البيومترية.
 			</li>  <li> 
-الاستمرارية permanence  : أي دوام وثبات الخصائص البومترية وعدم تغيرها مع الزمن.
+الاستمرارية permanence  : أي دوام وثبات الخصائص البيومترية وعدم تغيرها مع الزمن.
 			</li> </p> 
 <p style="color: #74821F " >		 
 ،، مرة واحدة فقط خلال وجودنا في نظامنا الشمسي سوف يولد شخصين لهما نفس بصمات الأصابع.
