--- a/index2.html
+++ b/index2.html
@@ -50,7 +50,11 @@
 <h1 style="color: #374001"> الخصائص البيومترية  </h1>
 	<br> 
 
-	<p>    لنتعرف في البداية كيف يتم التحقق من هويتك في العالم الافتراضي؟! هناك 3 أساليب وتكون من خلال: 
+	<p>   لنتعرف في البداية كيف يتم التحقق من هويتك في العالم الافتراضي؟!
+		<br> 
+
+ هناك 3 أشياء إذا امتلكت احدهم سيتمكن النظام من التعرف عليك، وهي: 
+ 
   <br>
 1-    شيء تعرفه Knowledge-based : ككلمات السر ورقم الهوية الوطني	.
 <br>
