--- a/index2.html
+++ b/index2.html
@@ -96,7 +96,7 @@
 <p> يتم الحصول على البيانات البيومترية الخاصة بالفرد لأول مرة بحيث يتم تخزينها في قاعدة البيانات وربطها مع هويتك، مع إمكانية استدعائها لاحقاً عندما يتطلب الأمر، وتنفذ هذه المرحلة مرة واحدة فقط. (كإضافة بصمة الأصبع لأول مرة في جهازك)   </p> 
 <li> مرحلة التعرف recognition phase: 
 </li> 
-<p> تتم عملية ادخال البيانات البيومترية الخاصة بالشخص، ومن ثم مقارنتها بالبيانات المسجلة في قاعدة البيانات ليتم التحقق من صحة هويتك، وتنفذ هذه المرحلة في كل مرة يستلزم فيها النظام التحقق من هويتك. (كإدخال بصمة الإصبع عند كل مرة تستخدم فيها جهازك)</p> 
+<p> يتم فيها عملية ادخال البيانات البيومترية الخاصة بالشخص، ومن ثم مقارنتها بالبيانات المسجلة في قاعدة البيانات ليتم التحقق من صحة هويتك، وتنفذ هذه المرحلة في كل مرة يستلزم فيها النظام التحقق من هويتك. (كإدخال بصمة الإصبع عند كل مرة تستخدم فيها جهازك)</p> 
 </ul> </p> 
 <br> <br> <br> <br>
          </div>
