--- a/index2.html
+++ b/index2.html
@@ -52,8 +52,8 @@
 
 	<p>   لنتعرف في البداية كيف يتم التحقق من هويتك في العالم الافتراضي؟!
 		<br> 
-
- هناك 3 أشياء إذا امتلكت احدهم سيتمكن النظام من التعرف عليك، وهي: 
+<br>
+ هناك 3 أشياء إذا امتلكت أحدهم سيتمكن النظام من التعرف عليك، وهي: 
  
   <br>
 1-    شيء تعرفه Knowledge-based : ككلمات السر ورقم الهوية الوطني	.
