--- a/index2.html
+++ b/index2.html
@@ -50,7 +50,7 @@
 <h1 style="color: #374001"> الخصائص البيومترية  </h1>
 	<br> 
 
-	<p>   لنتعرف في البداية كيف يتم التحقق من هويتك في العالم الافتراضي؟!
+	<p style="color: #BA2207">   لنتعرف في البداية كيف يتم التحقق من هويتك في العالم الافتراضي؟!
 		<br> </p> <p> 
 <br>
  هناك 3 أشياء إذا امتلكت أحدهم سيتمكن النظام من التعرف عليك، وهي: 
