--- a/index2.html
+++ b/index2.html
@@ -74,7 +74,7 @@
 	</p><p> 
 هي خصائص تستخدم للتعرف والتأكد من هوية الشخص بطريقة آلية، مثل الصوت وشبكية العين.
 		<br> <br>
-علم التعرف على الخصائص البيومتيرية تسعى إلى تحقيق شيئين أساسيين وهما التفرد والاستمرارية، وبناء على ذلك تمت المفاضلة بين الخصائص البيومترية وتحديد أفضلها.
+علم التعرف على الخصائص البيومترية تسعى إلى تحقيق شيئين أساسيين وهما التفرد والاستمرارية، وبناءً على ذلك تمت المفاضلة بين الخصائص البيومترية وتحديد أفضلها.
 		<ul> <li> 
 التفرد uniqueness: أي لا يوجد شخصين يملكون نفس الخصائص البيومترية.
 			</li>  <li> 
