--- a/index2.html
+++ b/index2.html
@@ -88,7 +88,15 @@
 <p> 
 قُبِل الادعاء السابق ليس بسبب وجود الأدلة العلمية الدقيقة التي تثبت صحته، بل لعدم وجود أدلة تناقضه. 
 </p> 
-		 
+<br> 
+	<p style="color: #BA2207"> تنقسم الخصائص البيومترية لنوعا، وهما:    </p> 
+	<ul>
+		<li> 	الخصائص البيومترية السكونية: </li> 
+		<p> وهي خصائص فريدة يمتلكها الفرد منذ الولادة وغير قابلة للتغيير.  <p> </pstyle="color: #BA2207"> ( كشبكية العين ) </p> 
+		<li>	الخصائص البيومترية الديناميكية:  </li> 
+			<p> وهي خصائص مبنية على حركات اللاوعي المتغيرة باستمرار.  <p> </pstyle="color: #BA2207">   ( كخط اليد )  </p> 
+	</ul>
+<p> تعتبر الخصائص السكونية أفضل من الخصائص البيومترية من حيث نسبة الخطأ والمصداقية، وتحقيقها للشرطين (التفرد والاستمرارية).</p> 
 <br>
 <p style="color: #BA2207"> النظام البيومتري يعمل بمرحلتين أساسيتين، هما:   </p> 
 <p> <ul> 
