--- a/index2.html
+++ b/index2.html
@@ -92,9 +92,9 @@
 	<p style="color: #BA2207"> تنقسم الخصائص البيومترية لنوعا، وهما:    </p> 
 	<ul>
 		<li> 	الخصائص البيومترية السكونية: </li> 
-		<p> وهي خصائص فريدة يمتلكها الفرد منذ الولادة وغير قابلة للتغيير.  <p style="color: #1b1640"> ( كشبكية العين ) </p> </p>
+		<p> وهي خصائص فريدة يمتلكها الفرد منذ الولادة وغير قابلة للتغيير. ( كشبكية العين )  </p>
 		<li>	الخصائص البيومترية الديناميكية:  </li> 
-			<p> وهي خصائص مبنية على حركات اللاوعي المتغيرة باستمرار.  <p style="color: #1b1640">   ( كخط اليد )  </p> </p> 
+			<p> وهي خصائص مبنية على حركات اللاوعي المتغيرة باستمرار.  ( كخط اليد )   </p> 
 	</ul>
 <p> تعتبر الخصائص السكونية أفضل من الخصائص البيومترية من حيث نسبة الخطأ والمصداقية، وتحقيقها للشرطين (التفرد والاستمرارية).</p> 
 <br>
