--- a/index2.html
+++ b/index2.html
@@ -89,7 +89,7 @@
 قُبِل الادعاء السابق ليس بسبب وجود الأدلة العلمية الدقيقة التي تثبت صحته، بل لعدم وجود أدلة تناقضه. 
 </p> 
 <br> 
-	<p style="color: #BA2207"> تنقسم الخصائص البيومترية لنوعا، وهما:    </p> 
+	<p style="color: #BA2207"> تنقسم الخصائص البيومترية لنوعين، وهما:    </p> 
 	<ul>
 		<li> 	الخصائص البيومترية السكونية: </li> 
 		<p> وهي خصائص فريدة يمتلكها الفرد منذ الولادة وغير قابلة للتغيير. ( كشبكية العين )  </p>
