--- a/index2.html
+++ b/index2.html
@@ -108,7 +108,19 @@
 </li> 
 <p> يتم فيها عملية ادخال البيانات البيومترية الخاصة بالشخص، ومن ثم مقارنتها بالبيانات المسجلة في قاعدة البيانات ليتم التحقق من صحة هويتك، وتنفذ هذه المرحلة في كل مرة يستلزم فيها النظام التحقق من هويتك. (كإدخال بصمة الإصبع عند كل مرة تستخدم فيها جهازك)</p> 
 </ul> </p> 
-<br> <br> <br> <br>
+<br> 
+
+<p> من المهم أن يعمل النظام البيومتري بشكل متقن ودقيق؛ ليعطي النتيجة الصحيحة وبدون أخطاء، ولذلك وجدت قياسات خاصة به تقيس مدى دقة النظام، وهي: </p> 
+<ul> 
+	<li> معدل المطابقة الخاطئة (FMR): </li>
+	<p> المعدل الذي يعلن فيه النظام بشكل غير صحيح بأن عينة القياسات البيومترية تنتمي إلى الهوية المطالب بها، ولكن فعلياً لا تنتمي العينة إلى للشخص.  </p> 
+	<li> معدل عدم المطابقة الخاطئة (FNMR): </li>
+	<p> المعدل الذي يرفض فيه النظام بشكل غير صحيح للهوية المزعومة، عندما تنتمي العينة فعليًا إلى للشخص. </p> 
+	
+	
+</ul> 
+
+<br> <br> <br>
          </div>
 
 
