--- a/index2.html
+++ b/index2.html
@@ -117,10 +117,17 @@
 	<li> معدل عدم المطابقة الخاطئة (FNMR): </li>
 	<p> المعدل الذي يرفض فيه النظام بشكل غير صحيح للهوية المزعومة، عندما تنتمي العينة فعليًا إلى للشخص. </p> 
 	
-	
 </ul> 
 
-<br> <br> <br>
+<br>
+
+<p> أصبح استخدام الخصائص البيومترية متزايدا نظراً لتطوير خوارزميات جديدة وذات موثوقية عالية، ومن أهم استخداماتها، التحقق من هوية الشخص في كل من:   </p> 
+<ul> 
+	<li> ارسال واستقبال المعلومات السرية.  </li> 
+	<li> الحفاظ على الموارد الحكومية.</li> 
+	<li> تنفيذ العمليات التجارية الإلكترونية. </li> 
+</ul> 
+<br> <br>
          </div>
 
 
