--- a/index2.html
+++ b/index2.html
@@ -112,9 +112,9 @@
 
 <p> من المهم أن يعمل النظام البيومتري بشكل متقن ودقيق؛ ليعطي النتيجة الصحيحة وبدون أخطاء، ولذلك وجدت قياسات خاصة به تقيس مدى دقة النظام، وهي: </p> 
 <ul> 
-	<li> معدل المطابقة الخاطئة (FMR): </li>
+	<li> معدل المطابقة الخاطئة <span class ="Ctext">(FMR)</span>: </li>
 	<p> المعدل الذي يعلن فيه النظام بشكل غير صحيح بأن عينة القياسات البيومترية تنتمي إلى الهوية المطالب بها، ولكن فعلياً لا تنتمي العينة إلى للشخص.  </p> 
-	<li> معدل عدم المطابقة الخاطئة (FNMR): </li>
+	<li> معدل عدم المطابقة الخاطئة <span class="Ctext">(FNMR) </span> : </li>
 	<p> المعدل الذي يرفض فيه النظام بشكل غير صحيح للهوية المزعومة، عندما تنتمي العينة فعليًا إلى للشخص. </p> 
 	
 </ul> 
