--- a/index2.html
+++ b/index2.html
@@ -128,6 +128,9 @@
 	<li> تنفيذ العمليات التجارية الإلكترونية. </li> 
 </ul> 
 <br> <br>
+<p>  المرجع:</p> 
+<p  class="refc"> Jain, A. K., Ross, A. A., & Nandakumar, K. (2011). Introduction to biometrics. Springer Science & Business Media.
+</p> 
          </div>
 
 
