--- a/index2.html
+++ b/index2.html
@@ -47,7 +47,7 @@
 <!-- Page Content -->
 <div id="body-container">
 <br> 
-<h1 style="color: #374001"> الخصائص البيومترية  </h1>
+<h1 style="font-family:'Amiri', serif;color: #374001" > الخصائص البيومترية  </h1>
 	<br> 
 
 	<p style="color: #BA2207">   لنتعرف في البداية كيف يتم التحقق من هويتك في العالم الافتراضي؟!
